# api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  flake.nix
.github/workflows/: api.yml  rust.yml
docs/: phantom.mcd
migrations/2022-04-07-092309_create_metrics/: down.sql  up.sql
migrations/2022-04-15-100128_create_agents/: down.sql
migrations/2022-04-22-110000_create_lambdas/: down.sql  up.sql
migrations/2022-04-22-120000_create_agents/: down.sql  up.sql
migrations/2022-04-22-130000_create_metrics/: down.sql  up.sql
migrations/2022-04-22-140000_create_organizations/: down.sql  up.sql
migrations/2022-04-22-150000_create_monitors/: down.sql  up.sql
migrations/2022-04-22-160000_create_roles/: down.sql  up.sql
migrations/2022-04-22-170000_create_users/: up.sql
migrations/2022-04-22-180000_create_organizationsUsers/: down.sql  up.sql
migrations/2022-05-28-133753_update_monitors_add_fk_user/: down.sql  up.sql
migrations/2022-07-01-095453_monitors_add_fk_user/: down.sql  up.sql
migrations/2022-07-08-151204_create_email_confirmations/: down.sql  up.sql
migrations/2022-07-08-152149_create_users_email_confirmations/: down.sql  up.sql
schemaspy/config/: schemaspy.properties
src/: main.rs  schema.rs
src/agents/: mod.rs  model.rs
src/metrics/: mod.rs  model.rs
src/middlewares/: auth.rs
src/monitors/: mod.rs  model.rs
src/organizations/: mod.rs  model.rs
src/roles/: mod.rs  model.rs
src/services/: email.rs  mod.rs  response.rs  template.rs
templates/: alert.hbs  confirmation_email.hbs
(+9 files in other folders)
