[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.5"
rocket_contrib = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
