[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
serde_json = "1.0.44"
serde_derive = "1.0.136"
serde = "1.0.136"
env_logger = "0.9.0"
log = "0.4"