[package]
name = "actix_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
serde_json = "1.0.44"
serde_derive = "1.0.136"
serde = "1.0.136"
env_logger = "0.9.0"
log = "0.4"
rand = "0.8.5"
chrono = "0.4.11"
jsonwebtoken = "7.1.0"
rust-crypto = "0.2.36"
futures = "0.3.4"
derive_more = "0.99.2"
rusoto_core = "0.48.0"
rusoto_ses = "0.48.0"
handlebars = "4.3.1"
base64 = "0.13.0"
bytes = "1.1.0"
mail-builder = "0.2.0"